# src/main/java/br/com/finance/modules/keycloak/dto/KeycloakUserFamilyRecord.java
@@ -1,0 +1,10 @@
+package br.com.finance.modules.keycloak.dto;
+
+public record KeycloakUserFamilyRecord(
+        String userId,
+        String nome,
+        String sobrenome,
+        Long familyId,
+        String familyName
+) {
+}
